Removed debug messages. Fixed front page image on mobile.

--- a/css/sass/image-field.scss
+++ b/css/sass/image-field.scss
@@ -174,7 +174,7 @@
 			line-height: 1em;
 
 			p {
-				margin: 0.3em 0.5em 0;
+				margin: 0.3em 0.5em;
 			}
 		}
 	}
@@ -185,7 +185,7 @@
 	.wm-image-label {
 		background-color: rgba(255, 255, 255, 0.95);
 		color: $dark;
-		z-index: 0;	
+		z-index: 0;
 	}
 
 	.wm-image-author {
